// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for theme: dark 1`] = `
":host {
  display: block !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
  color: #FBFCFF !important;
  text-align: start !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-table-hover-color: rgba(148, 149, 152, .18) !important;
  --p-internal-table-border-color: #404044 !important;
  --p-internal-table-head-cell-icon-filter: invert(100%) !important;
}
.caption {
  margin-bottom: clamp(16px, 1.25vw + 12px, 36px);
}
.table {
  display: table;
  border-collapse: collapse;
  width: 100%;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for theme: light 1`] = `
":host {
  display: block !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
  color: #010205 !important;
  text-align: start !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-table-hover-color: rgba(148, 149, 152, .18) !important;
  --p-internal-table-border-color: #D8D8DB !important;
  --p-internal-table-head-cell-icon-filter: none !important;
}
.caption {
  margin-bottom: clamp(16px, 1.25vw + 12px, 36px);
}
.table {
  display: table;
  border-collapse: collapse;
  width: 100%;
  white-space: nowrap;
}"
`;
